--- a/lang/es.json
+++ b/lang/es.json
@@ -191,7 +191,7 @@
     "You may not leave a team that you created.": "No se puede abandonar un equipo que usted creó.",
     "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
     "Welcome": "Bienvenido",
-    "worker": "Trabajador",
+    "trabajador": "Trabajador",
     "admin": "Administrador",
     "client": "Cliente",
     "progress": "en proceso",
